# sv_raster

./: .gitignore  TODOs.md  pyproject.toml  train.sh  viz.sh
backends/cuda/: binding.cpp
backends/cuda/src/: auxiliary.h  config.h  forward.h
backends/cuda/svraster_cuda/: meta.py
backends/new_cuda/: __init__.py  binding.cpp  pyproject.toml  setup.py
backends/new_cuda/new_svraster_cuda/: meta.py
backends/new_cuda/src/: auxiliary.h  backward.cu  forward.cu  preprocess.cu  raster_state.cu  raster_state.h
backends/new_cuda_aa/: __init__.py  setup.py
backends/new_cuda_aa/src/: auxiliary.h  backward.cu  forward.cu  preprocess.cu  preprocess.h  raster_state.cu  raster_state.h
backends/new_cuda_aa/svraster_cuda_aa/: renderer.py
backends/new_cuda_cont/: binding.cpp  setup.py
backends/new_cuda_cont/src/: backward.cu  backward.h  forward.cu  forward.h  geo_params_gather.cu  preprocess.h  sh_compute.cu  sh_compute.h
backends/new_cuda_cont/svraster_cuda_cont/: renderer.py
backends/new_cuda_spline/: __init__.py  setup.py
backends/new_cuda_spline/src/: adam_step.cu  auxiliary.h  backward.cu  backward.h  config.h  forward.cu  geo_params_gather.cu  raster_state.h
backends/new_cuda_spline/svraster_cuda_spline/: renderer.py
cuda/: setup.py
cuda/svraster_cuda/: __init__.py
new_cuda/: pyproject.toml  setup.py
new_cuda/new_svraster_cuda/: __init__.py
new_cuda/src/: backward.cu  forward.cu  preprocess.cu
notes/: sub-pixel-integration.md
src/sv_raster/: cameras.py  sparse_voxel_model.py
src/sv_raster/dataloader/: data_pack.py  reader_colmap_dataset.py  reader_nerf_dataset.py
src/sv_raster/new/: backend.py  cameras.py  config.py  eval.py  extract_mesh.py  render.py  render_by_trace_sdf.py  render_fly_through.py  sparse_voxel_model.py  train.py  viz.py
src/sv_raster/new/dataloader/: data_pack.py  reader_colmap_dataset.py  reader_nerf_dataset.py  resolution_utils.py
src/sv_raster/new/sparse_voxel_gears/: adaptive.py  constructor.py  io.py  pooling.py  properties.py  renderer.py
src/sv_raster/new/utils/: activation_utils.py  image_utils.py  octree_utils.py
src/sv_raster/reference/: config.py  eval.py  extract_mesh.py  render.py  render_by_trace_sdf.py  render_fly_through.py  sparse_voxel_model.py  train.py  viz.py
src/sv_raster/reference/dataloader/: data_pack.py  reader_colmap_dataset.py  reader_nerf_dataset.py
src/sv_raster/reference/sparse_voxel_gears/: adaptive.py  constructor.py  io.py  pooling.py  properties.py  renderer.py
src/sv_raster/reference/utils/: camera_utils.py  fuser_utils.py  system_utils.py
src/sv_raster/sparse_voxel_gears/: adaptive.py  constructor.py  io.py  pooling.py  properties.py  renderer.py
src/sv_raster/utils/: bounding_utils.py  colmap_utils.py
